--- a/flows/quiz15.yml
+++ b/flows/quiz15.yml
@@ -68,7 +68,7 @@ rules:
   grading:
   - credit_percent: 100
   start:
-  - if_before: 2020-10-23 23:05:31.937379
+  - if_before: 2020-12-31 18:06:10+00:00
     if_has_fewer_sessions_than: 100
     if_has_role:
     - student
